[package]
name = "game_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = {version = "2.0.1", features = ["serde"]}
crossterm = {version = "0.29.0", features = ["event-stream"]}
futures = "0.3.31"
log = "0.4.29"
log4rs = "1.4.0"
postcard = "1.1.3"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
tokio = {version = "1", features = ["full"]}
zerocopy = { version = "0.8.31", features = ["derive"] }
